--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,7 +13,9 @@
   "type": "commonjs",
   "dependencies": {
     "@koa/cors": "^5.0.0",
+    "axios": "^1.13.5",
     "bcrypt": "^6.0.0",
+    "dotenv": "^17.3.1",
     "jsonwebtoken": "^9.0.3",
     "koa": "^3.1.1",
     "koa-bodyparser": "^4.4.1",
