--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,6 +21,7 @@
     "koa-bodyparser": "^4.4.1",
     "koa-router": "^14.0.0",
     "mysql2": "^3.17.2",
+    "openai": "^6.25.0",
     "svg-captcha": "^1.4.0"
   }
 }
